--- a/Resources/AvailableDocSets.plist
+++ b/Resources/AvailableDocSets.plist
@@ -5,12 +5,20 @@
 	<key>DocSets</key>
 	<array>
 		<dict>
-		        <key>title</key>
-		        <string>iOS 6.1 Library</string>
-		        <key>name</key>
-		        <string>com.apple.adc.documentation.AppleiOS6.1.iOSLibrary.docset</string>
-		        <key>URL</key>
-		        <string>http://devimages.apple.com/docsets/20130130/com.apple.adc.documentation.AppleiOS6.1.iOSLibrary.xar</string>
+			<key>title</key>
+			<string>RubyMotion</string>
+			<key>name</key>
+			<string>ws.spress.documentation.RubyMotion.docset</string>
+			<key>URL</key>
+			<string>https://docs.google.com/file/d/0B9Vy_hSimsjuQS00amxheVFqdnM/edit?usp=sharing</string>
+		</dict>
+		<dict>
+			<key>title</key>
+			<string>iOS 6.1 Library</string>
+			<key>name</key>
+			<string>com.apple.adc.documentation.AppleiOS6.1.iOSLibrary.docset</string>
+			<key>URL</key>
+			<string>http://devimages.apple.com/docsets/20130130/com.apple.adc.documentation.AppleiOS6.1.iOSLibrary.xar</string>
 		</dict>
 		<dict>
 			<key>title</key>
